# LSC-wasm-vs-containers-benchmark

./: .gitignore  PROJECT_PLAN_3W.md  README.md  requirements.md  requirements_1.md
benchmarks/: smoke_oci.sh  smoke_spin.sh
docs/: CONSULTATION.md  ENVIRONMENT.md  METHODOLOGY.md  upstream-wasi-blockers.md
fixtures/: README.md  documents.json
oci-baseline/: Dockerfile  README.md  default.conf  docker-compose.yml
oci-baseline/site/: index.html
oci-baseline/site/blog/: example.html
oci-meilisearch/: README.md  docker-compose.yml
scripts/: check-upstream-native.sh  check-upstream-wasi.sh  fetch-meilisearch.sh  fetch-mini-dashboard.sh
spin-bartholomew/: .gitignore  README.md  spin.toml
spin-bartholomew/.spin/logs/: bartholomew_stderr.txt
spin-bartholomew/config/: site.toml
spin-bartholomew/content/blog/: example.md
spin-bartholomew/scripts/: blogs.rhai  get_page.rhai
spin-bartholomew/shortcodes/: alert.rhai
spin-bartholomew/static/: style.css
spin-meili/: Cargo.toml  spin.toml
spin-meili/crates/core/: Cargo.toml
spin-meili/crates/core/src/: lib.rs
spin-meili/crates/legacy-subset-core/: Cargo.toml
spin-meili/crates/legacy-subset-core/src/: lib.rs
spin-meili/crates/meili-wasi-compat/: Cargo.toml
spin-meili/crates/meili-wasi-compat/src/: lib.rs
spin-meili/crates/spin-http-adapter/: Cargo.toml
spin-meili/crates/spin-http-adapter/src/: lib.rs
spin-meili/crates/storage-memory/: Cargo.toml
spin-meili/crates/storage-memory/src/: lib.rs
spin-meili/static/mini-dashboard/: index.html
spin-meili/static/mini-dashboard/assets/: index-dDwzADMz.js
