[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage-memory",
    "crates/spin-http-adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Milosz Slowinski <slowinski.milosz@gmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
meili-spin-core = { path = "crates/core" }
meili-spin-storage-memory = { path = "crates/storage-memory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin-sdk = "5.2.0"
