[package]
name = "meili-spin-core"
description = "Portable Meilisearch-compatible subset logic for the Spin benchmark."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
