[package]
name = "meili-wasi-compat"
description = "Compatibility boundary for adapting upstream Meilisearch crates to Spin/WASI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
