[package]
name = "spin-http-adapter"
description = "Spin HTTP adapter for the Meilisearch-compatible benchmark service."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
meili-spin-core.workspace = true
meili-spin-storage-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
spin-sdk.workspace = true
