[package]
name = "meili-spin-storage-memory"
description = "Process-local in-memory storage for the Meilisearch-compatible Spin benchmark."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
meili-spin-core.workspace = true
